syntax = "proto3";

package auth.v1;


option go_package = "github.com/wyfcoding/financialtrading/go-api/auth/v1;v1";

service AuthService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
  }
}

message RegisterRequest {
  string email = 1;
  string password = 2;
}

message RegisterResponse {
  string user_id = 1;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string token = 1;
  string type = 2;
  int64 expires_at = 3;
}
