syntax = "proto3";
package cart.v1;
option go_package = "github.com/wyfcoding/financialtrading/go-api/cart/v1;v1";

service CartService {
}

message CartItem { string product_id = 1; int32 quantity = 2; double price = 3; }
message GetCartRequest { string user_id = 1; }
message GetCartResponse { string user_id = 1; repeated CartItem items = 2; double total = 3; }
message AddItemRequest { string user_id = 1; string product_id = 2; int32 quantity = 3; double price = 4; }
message AddItemResponse { bool success = 1; }
message RemoveItemRequest { string user_id = 1; string product_id = 2; }
message RemoveItemResponse { bool success = 1; }
message ClearCartRequest { string user_id = 1; }
message ClearCartResponse { bool success = 1; }
